--- a/Sleepy Time [Remastered]/config/yasb/config.yaml
+++ b/Sleepy Time [Remastered]/config/yasb/config.yaml
@@ -52,9 +52,9 @@ bars:
         [
           "weather",
           "volume",
-          "wifi",
-          "battery",
           "disk",
+          "notes",
+          "battery",
           "power_menu"
         ]
 widgets:
@@ -135,22 +135,50 @@ widgets:
     type: "yasb.media.MediaWidget"
     options:
       label: "<span>\udb80\udf87</span> {title}"
-      label_alt: "<span>\udb80\udf87</span> {artist}"
-      hide_empty: false
+      label_alt: "<span>\udb80\udf87</span> {title}"
+      hide_empty: true
+      callbacks:
+       on_left: "toggle_media_menu"
+       on_middle: "do_nothing"
+       on_right: "toggle_label"
       max_field_size:
-        label: 20
-        label_alt: 20
+        label: 50
+        label_alt: 50
       show_thumbnail: false
       controls_only: false
       controls_left: true
       thumbnail_alpha: 50
-      thumbnail_padding: 
+      thumbnail_padding: 0
       thumbnail_corner_radius: 8
       icons:
         prev_track: "\ue892"
         next_track: "\ue893"
         play: "\ue768"
         pause: "\ue769"
+      media_menu:
+       blur: true
+       round_corners: true
+       round_corners_type: "normal"
+       border_color: "#cba6f7"
+       alignment: "right"
+       direction: "down"
+       offset_top: 6
+       offset_left: 0
+       thumbnail_corner_radius: 8
+       thumbnail_size: 120
+       max_title_size: 80
+       max_artist_size: 20
+       show_source: true
+      media_menu_icons:
+       play: "\ue768"
+       pause: "\ue769"
+       prev_track: "\ue892"
+       next_track: "\ue893"
+      label_shadow:
+       enabled: true
+       color: "black"
+       radius: 3
+       offset: [ 1, 1 ]
   clock:
     type: "yasb.clock.ClockWidget"
     options:
@@ -298,3 +326,37 @@ widgets:
       callbacks:
         on_left: 'toggle_label'
         on_right: 'exec cmd /c Taskmgr'
+  notes:
+    type: "yasb.notes.NotesWidget"
+    options:
+      label: "<span>\udb82\udd0c</span> {count}"
+      label_alt: "{count} notes"
+    container_padding:
+      top: 0
+      left: 0
+      bottom: 0
+      right: 0
+    menu:
+      blur: true
+      round_corners: true
+      round_corners_type: "normal"
+      border_color: "System"
+      alignment: "right"
+      direction: "down"
+      offset_top: 6
+      offset_left: 0
+      max_title_size: 150
+      show_date_time: true
+    icons:
+      note: "\udb82\udd0c"
+      delete: "\ue20d"
+    callbacks:
+      on_left: "toggle_menu"
+      on_middle: "do_nothing"
+      on_right: "toggle_label"
+    label_shadow:
+      enabled: true
+      color: "black"
+      radius: 3
+      offset: [ 1, 4 ]
+
